package com.observer.interfaces;

/**
 *
 * @author andre
 */
public interface Commentary {
    public void setDesc(String desc);
}
